--- a/notebooks/previous_hypotheses.ipynb
+++ b/notebooks/previous_hypotheses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "ba7588ca",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
     "\n",
     "    try:\n",
     "        response = requests.post(\n",
-    "            \"http://localhost:11434/api/chat\",  # Changed from /api/generate to /api/chat\n",
+    "            \"http://localhost:11434/api/chat\",  # example\n",
     "            json={\n",
     "                \"model\": \"qwen2.5-coder:1.5b-base\",\n",
     "                \"messages\": [{\"role\": \"user\", \"content\": prompt}],\n",
